# gold-dao

./: .gitignore  .gitlab-ci.yml  .prettierrc  .prettierrc.json  Cargo.toml  LICENSE  README.md  canister_ids copy.json  canister_ids.json  deploy-scripts.sh  dfx.json  next.config.js  package-lock.json  package.json  proposal_frontend_template.md  proposal_template.md  sns.yml  test.did
backend/canisters/buyback_burn/api/: Cargo.toml  can.did
backend/canisters/buyback_burn/api/src/: lib.rs
backend/canisters/buyback_burn/impl/: Cargo.toml
backend/canisters/buyback_burn/impl/src/: lib.rs  state.rs  timer_job_types.rs  utils.rs
backend/canisters/cycles_manager/api/: Cargo.toml  can.did
backend/canisters/cycles_manager/api/src/: main.rs
backend/canisters/cycles_manager/impl/: Cargo.toml
backend/canisters/cycles_manager/impl/src/: lib.rs  state.rs
backend/canisters/gldt_core/impl/: Cargo.toml  build.rs
backend/canisters/gldt_core/impl/src/: lib.rs  test.rs
backend/canisters/gldt_fee_compensation/impl/: Cargo.toml
backend/canisters/gldt_fee_compensation/impl/src/: lib.rs  test.rs
backend/canisters/gldt_stake/impl/: Cargo.toml
backend/canisters/gldt_stake/impl/src/: guards.rs  lib.rs  memory.rs  state.rs  utils.rs
backend/canisters/gldt_swap/archive/: Cargo.toml
backend/canisters/gldt_swap/archive/src/: lib.rs  memory.rs  state.rs  utils.rs
backend/canisters/gldt_swap/impl/: Cargo.toml
backend/canisters/gldt_swap/impl/src/: archive.rs  guards.rs  lib.rs  memory.rs  service_status.rs  state.rs  utils.rs
backend/canisters/icp_neuron/api/: Cargo.toml  can.did
backend/canisters/icp_neuron/api/src/: lib.rs
backend/canisters/icp_neuron/common/: Cargo.toml
backend/canisters/icp_neuron/common/src/: lib.rs
backend/canisters/icp_neuron/impl/: Cargo.toml
backend/canisters/icp_neuron/impl/src/: ecdsa.rs  guards.rs  lib.rs  memory.rs  state.rs
backend/canisters/management/impl/: Cargo.toml
backend/canisters/management/impl/src/: lib.rs  state.rs
backend/canisters/sns_neuron_controller/api/: Cargo.toml  can.did
backend/canisters/sns_neuron_controller/impl/: Cargo.toml
backend/canisters/sns_neuron_controller/impl/src/: lib.rs  memory.rs  state.rs  utils.rs
backend/canisters/sns_rewards/api/: Cargo.toml  can.did
backend/canisters/sns_rewards/api/src/: lib.rs
backend/canisters/sns_rewards/impl/: Cargo.toml
backend/canisters/sns_rewards/impl/src/: guards.rs  lib.rs  memory.rs  state.rs  storage.rs  utils.rs
backend/canisters/super_stats_v3/c2c_client/: Cargo.toml
backend/canisters/super_stats_v3/c2c_client/src/: lib.rs
backend/canisters/super_stats_v3/impl/: Cargo.toml
backend/canisters/super_stats_v3/impl/src/: lib.rs  test_data.rs
backend/canisters/token_metrics/api/: Cargo.toml  can.did
backend/canisters/token_metrics/api/src/: consts.rs  lib.rs
backend/canisters/token_metrics/impl/: Cargo.toml
backend/canisters/token_metrics/impl/src/: consts.rs  lib.rs  memory.rs  state.rs
backend/canisters/usdg/api/: Cargo.toml
backend/canisters/usdg/api/src/: lib.rs  types.rs
backend/canisters/usdg/impl/: Cargo.toml
backend/canisters/usdg/impl/src/: lib.rs  management.rs  numeric.rs  state.rs  tasks.rs  transfer.rs  vault.rs
backend/integration_testing/: Cargo.toml  nns.wasm  old.rs  pocket-ic-x86_64-linux:Zone.Identifier
backend/integration_testing/src/: lib.rs  sns_init_payload.rs  utils.rs  wasms.rs
backend/integration_testing/src/buyback_burn_suite/setup/: mod.rs  setup.rs  setup_buyback_burn.rs  setup_ledger.rs  setup_rewards.rs  setup_sns_neuron_controller.rs
backend/integration_testing/src/buyback_burn_suite/tests/: mod.rs  test_burn_amount_recalculation.rs  (+1 more)
backend/integration_testing/src/client/: buyback_burn.rs  cycles_manager.rs  gldt_archive.rs  gldt_stake.rs  gldt_swap.rs  icrc1.rs  icrc1_icrc2_token.rs  macros.rs  mod.rs  origyn_nft_reference.rs  pocket.rs  rewards.rs  sns_governance.rs  sns_neuron_controller.rs  sns_root_canister.rs  usdg.rs
backend/integration_testing/src/gldt_stake_suite/: mod.rs  utils.rs
backend/integration_testing/src/gldt_swap_suite/: init.rs  mod.rs  nft_utils.rs
backend/integration_testing/src/setup/: ledger.rs  mod.rs  rewards.rs  setup.rs  setup_ledger.rs  setup_rewards.rs  setup_sns.rs  sns.rs
backend/integration_testing/src/sns_test_env/: mod.rs  sns_init_args.rs  sns_test_env.rs
backend/integration_testing/src/tests/: distribute_rewards.rs  happy_path.rs  mod.rs  reserve_pool_distribution.rs  reward_claim.rs  synchronise_neurons.rs  test_distribute_rewards.rs  test_distribute_rewards_v2.rs  test_gldgov_burn.rs  test_reserve_pool_distribution.rs  test_reserve_pool_distribution_v2.rs  test_reward_claim.rs  test_reward_claim_v2.rs  test_reward_token_types.rs  test_synchronise_neurons.rs  test_synchronise_neurons_v2.rs
backend/integration_testing/src/usdg_suite/: init.rs  mod.rs
backend/integration_testing/wasms/: cycles_burner_canister.wasm  cycles_minting_canister.wasm  sns_governance_canister.wasm  sns_root_canister.wasm
backend/libraries/canister_timer_jobs/: Cargo.toml
backend/libraries/canister_timer_jobs/job_macros/: Cargo.toml
backend/libraries/canister_timer_jobs/src/: lib.rs  timer_manager.rs
canister/gldt_core/: Cargo.toml  build.rs
canister/gldt_core/declarations/: gldt_core.did.d.ts  gldt_core.did.js  index.d.ts
canister/gldt_core/src/: gldt_core.did  lib.rs  misc.rs  records.rs  registry.rs  test.rs  types.rs
canister/gldt_core/src/declarations/: gld_nft.rs  gld_nft_manual.rs  gld_nft_manual_2.rs  gldnft_backend_1g.rs  icrc1.rs  mod.rs
canister/gldt_core/tests/: test.rs
canister/gldt_fee_compensation/: Cargo.toml
canister/gldt_fee_compensation/declarations/: gldt_fee_compensation.did  gldt_fee_compensation.did.js  index.js
canister/gldt_fee_compensation/src/: error.rs  gldt_fee_compensation.did  lib.rs  registry.rs  test.rs
canister/gldt_libs/: Cargo.toml
canister/gldt_libs/src/: gld_nft.rs  gldt_ledger.rs  lib.rs  misc.rs  types.rs
canister/sns_rewards/impl/: Cargo.toml
canister/sns_rewards/impl/src/: lib.rs
(+2329 files in other folders)
