[workspace]
members = ["canister/gldt_core", "canister/gldt_fee_compensation","canister/sns_rewards/impl","canister/sns_rewards/api"]
resolver = "2"

[profile.release]
lto = "thin"
panic = "abort"

[workspace.dependencies]
candid = { version = "0.10.2"}
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8.1"
ic-stable-structures = "0.6.1"
icrc-ledger-types = "0.1.3"
serde = "1.0.192"
serde_derive = "1.0.192"
serde_bytes = "0.11.12"
serde_json = "1.0.108"
futures = "0.3.29"
ic-cdk-timers = "0.6.0"
