[workspace]
members = [
  "backend/canisters/gldt_core",
  "backend/canisters/gldt_fee_compensation",
  "backend/canisters/sns_rewards/api",
  "backend/canisters/sns_rewards/impl",
  "backend/external_canisters/sns_governance/api",
  "backend/external_canisters/sns_governance/c2c_client",
  "backend/libraries/candid_gen",
  "backend/libraries/canister_client",
  "backend/libraries/canister_client_macros",
  "backend/libraries/canister_logger",
  "backend/libraries/canister_state_macros",
  "backend/libraries/canister_time",
  "backend/libraries/canister_tracing_macros",
  "backend/libraries/types",
]
resolver = "2"

[profile.release]
lto = "thin"
panic = "abort"

[workspace.dependencies]
candid = { version = "0.10.2" }
futures = "0.3.29"
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8.1"
ic-cdk-timers = "0.6.0"
ic-stable-structures = "0.6.1"
ic0 = "0.21.1"
icrc-ledger-types = "0.1.5"
proc-macro2 = "1.0.78"
quote = "1.0.33"
serde = "1.0.192"
serde_bytes = "0.11.12"
serde_derive = "1.0.192"
serde_json = "1.0.108"
syn = "2.0.39"
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-subscriber = "0.3.18"
