[package]
name = "integration_testing"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3.18"
ic-cdk = {workspace = true}
pocket-ic = {workspace = true}
candid = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
types = { path = "../libraries/types" }
utils = { path = '../libraries/utils' }
serde_yaml = { workspace = true }
canister_logger = { path = '../libraries/canister_logger' }
canister_state_macros = { path = '../libraries/canister_state_macros' }
canister_time = { path = '../libraries/canister_time' }
canister_tracing_macros = { path = '../libraries/canister_tracing_macros' }
http_request = { path = '../libraries/http_request' }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-ledger-types = { workspace = true }
serializer = { path = '../libraries/serializer' }
sns_governance_canister = { path = '../external_canisters/sns_governance/api' }
sns_governance_canister_c2c_client = { path = '../external_canisters/sns_governance/c2c_client' }
icrc_ledger_canister_c2c_client = { path = "../external_canisters/icrc_ledger/c2c_client" }
stable_memory = { path = '../libraries/stable_memory' }
tracing = { workspace = true }
futures = { workspace = true }
icrc_ledger_canister = { path = "../external_canisters/icrc_ledger/api" }
num-bigint = {workspace = true}
rand = "0.8.5"
lazy_static = "1.4.0"
hex = "0.4"
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
sha2 = "0.10.8"
sns_rewards_api_canister = { path = "../canisters/sns_rewards/api" }
cycles_manager_api_canister = { path = "../canisters/cycles_manager/api" }
sns_neuron_controller_api_canister = { path = "../canisters/sns_neuron_controller/api" }