[package]
name = "integration_testing"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pocket-ic = {workspace = true}
candid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
types = { path = "../libraries/types" }
utils = { path = '../libraries/utils' }
canister_time = { path = '../libraries/canister_time' }
icrc-ledger-types = { workspace = true }
ic-ledger-types = { workspace = true }
sns_governance_canister = { path = '../external_canisters/sns_governance/api' }
icrc_ledger_canister = { path = "../external_canisters/icrc_ledger/api" }
rand = "0.8.5"
lazy_static = "1.4.0"
hex = "0.4"
sha2 = "0.10.8"
sns_rewards_api_canister = { path = "../canisters/sns_rewards/api" }
gldt_swap_api_canister = { path = "../canisters/gldt_swap/api"}
gldt_swap_api_archive = { path = "../canisters/gldt_swap/api_archive"}
gldt_swap_common = { path = "../canisters/gldt_swap/common"}
origyn_nft_reference = { path = '../external_canisters/origyn_nft_reference/api' }
sns_governance_canister_c2c_client = { path = '../external_canisters/sns_governance/c2c_client' }
icrc_ledger_canister_c2c_client = { path = "../external_canisters/icrc_ledger/c2c_client" }
stable_memory = { path = '../libraries/stable_memory' }
tracing = { workspace = true }
serde_bytes = { workspace = true }
sns_neuron_controller_api_canister = { path = "../canisters/sns_neuron_controller/api" }

buyback_burn_api = { path = "../canisters/buyback_burn/api" }
management_api_canister = { path = "../canisters/management/api" }
super_stats_v3_api = { path = "../canisters/super_stats_v3/api" }
token_metrics_api = { path = "../canisters/token_metrics/api" }