[package]
name = "integration_testing"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_matches = { workspace = true}
pocket-ic = { workspace = true}
candid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
types = { path = "../libraries/types" }
utils = { path = '../libraries/utils' }
canister_time = { path = '../libraries/canister_time' }
icrc-ledger-types = { workspace = true }
icrc-ledger-types-ic-main-repo =  { package = "icrc-ledger-types", git = "https://github.com/dfinity/ic.git", rev = "1488a310043f6a0907f4a84ba7af00e3d90d16eb" }
ic-ledger-types = { workspace = true }
icrc_ledger_canister = { path = "../external_canisters/icrc_ledger/api" }
rand = "0.8.5"
lazy_static = "1.4.0"
hex = "0.4"
sha2 = "0.10.8"
slog = "2.7.0"
sns_rewards_api_canister = { path = "../canisters/sns_rewards/api" }
gldt_swap_api_canister = { path = "../canisters/gldt_swap/api"}
gldt_swap_api_archive = { path = "../canisters/gldt_swap/api_archive"}
gldt_swap_common = { path = "../canisters/gldt_swap/common"}
gldt_stake_api_archive = { path = "../canisters/gldt_stake/api_archive"}
gldt_stake_api_canister = { path = "../canisters/gldt_stake/api"}
gldt_stake_common = { path = "../canisters/gldt_stake/common"}
usdg_minter_api = { path = "../canisters/usdg_minter/api"}
origyn_nft_reference = { path = '../external_canisters/origyn_nft_reference/api' }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sns_neuron_controller_api_canister = { path = "../canisters/sns_neuron_controller/api" }

buyback_burn_api = { path = "../canisters/buyback_burn/api" }
management_api_canister = { path = "../canisters/management/api" }
super_stats_v3_api = { path = "../canisters/super_stats_v3/api" }
token_metrics_api = { path = "../canisters/token_metrics/api" }

# SNS
sns_governance_canister = { path = '../external_canisters/sns_governance/api' }
sns_root_canister = { path = '../external_canisters/sns_root/api' }
sns_ledger_canister = { path = '../external_canisters/sns_ledger/api' }
sns_swap_canister = { path = '../external_canisters/sns_swap/api' }
sns_index_canister = { path = '../external_canisters/sns_index/api' }
