[package]
name = "gldt_fee_compensation"
version = "0.1.0"
description = "Canister to compensate the fees of converstion."
authors = ["Dustin Becker <dustin@bochslerfinance.com>"]
edition = "2021"

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
gldt_libs = {path="../gldt_libs"}
candid = { version = "0.9.9"}
futures = "0.3.28"
ic-cdk = "0.11.0"
ic-cdk-macros = "0.8.1"
ic-cdk-timers = "0.5.0"
icrc-ledger-types = "0.1.2"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_bytes = "0.11.12"
canistergeek_ic_rust = "0.4.2"

[dev-dependencies]
clippy="0.0.302"
tokio = { version = "1.33.0", features = ["full"] }
