[package]
name = "gldt_libs"
version = "0.1.0"
description = "Common libs for the GLDT project that are shared between canisters."
authors = ["Dustin Becker <dustin@bochslerfinance.com>"]
edition = "2021"

[dependencies]
candid = { workspace = true}
ic-cdk ={ workspace = true}
ic-cdk-macros = { workspace = true}
icrc-ledger-types = { workspace = true}
serde = { workspace = true}
serde_derive = { workspace = true}
serde_bytes = { workspace = true}

[dev-dependencies]
clippy="0.0.302"
tokio = { version = "1.33.0", features = ["full"] }
