[package]
name = "buyback_burn"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
canister_client = { path = "../../../libraries/canister_client" }
canister_logger = { path = "../../../libraries/canister_logger" }
canister_state_macros = { path = "../../../libraries/canister_state_macros" }
canister_tracing_macros = { path = "../../../libraries/canister_tracing_macros" }
canister_time = { path = "../../../libraries/canister_time" }
buyback_burn_canister = { path = "../api" }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
icp_ledger_canister_c2c_client = { path = "../../../external_canisters/icp_ledger/c2c_client" }
sns_governance_canister = { path = '../../../external_canisters/sns_governance/api' }
sns_governance_canister_c2c_client = { path = "../../../external_canisters/sns_governance/c2c_client" }
icrc_ledger_canister_c2c_client = { path = "../../../external_canisters/icrc_ledger/c2c_client" }
ledger_utils = { path = "../../../libraries/ledger_utils" }
#rand = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serializer = { path = "../../../libraries/serializer" }
stable_memory = { path = "../../../libraries/stable_memory" }
tracing = { workspace = true }
types = { path = "../../../libraries/types" }
utils = { path = "../../../libraries/utils" }
futures = { workspace = true }
icrc-ledger-types = { workspace = true }
icpswap_client = { path = "../../../libraries/icpswap_client" }
async-trait = { workspace = true }
http_request = { path = '../../../libraries/http_request' }
typetag = { workspace = true }