[package]
name = "cycles_manager_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
candid_gen = { path = "../../../libraries/candid_gen" }
ic-ledger-types = { workspace = true }
serde = { workspace = true }
types = { path = "../../../libraries/types" }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
stable_memory = { path = '../../../libraries/stable_memory' }
tracing = { workspace = true }
serializer = { path = '../../../libraries/serializer' }
canister_logger = { path = '../../../libraries/canister_logger' }