[package]
name = "cycles_manager_api_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
inttest = []

[dependencies]
candid = { workspace = true }
ic-ledger-types = { workspace = true }
serde = { workspace = true }
types = { path = "../../../libraries/types" }
