[package]
name = "cycles_manager"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
inttest = []

[dependencies]
candid = { workspace = true }
canister_client = { path = "../../../libraries/canister_client" }
canister_logger = { path = "../../../libraries/canister_logger" }
canister_state_macros = { path = "../../../libraries/canister_state_macros" }
canister_tracing_macros = { path = "../../../libraries/canister_tracing_macros" }
canister_time = { path = "../../../libraries/canister_time" }
cycles_manager_api_canister = { path = "../api" }
cycles_minting_canister = { path = "../../../external_canisters/cycles_minting_canister/api" }
cycles_minting_canister_c2c_client = { path = "../../../external_canisters/cycles_minting_canister/c2c_client" }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
ic-ledger-types = { workspace = true }
icp_ledger_canister_c2c_client = { path = "../../../external_canisters/icp_ledger/c2c_client" }
#rand = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serializer = { path = "../../../libraries/serializer" }
sns_root_canister = { path = "../../../external_canisters/sns_root/api" }
sns_root_canister_c2c_client = { path = "../../../external_canisters/sns_root/c2c_client" }
stable_memory = { path = "../../../libraries/stable_memory" }
tracing = { workspace = true }
types = { path = "../../../libraries/types" }
utils = { path = "../../../libraries/utils" }
futures = { workspace = true }
http_request = { path = '../../../libraries/http_request' }
