[package]
name = "gldt_fee_compensation"
version = "0.1.0"
description = "Canister to compensate the fees of converstion."
authors = ["Dustin Becker <dustin@bochslerfinance.com>"]
edition = "2021"
license = "AGPL-3.0-only"

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
gldt_libs = { path = "../../gldt_libs" }
candid = { workspace = true }
futures = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
icrc-ledger-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# serde_derive = { workspace = true }
serde_bytes = { workspace = true }

[dev-dependencies]
clippy = "0.0.302"
tokio = { version = "1.33.0", features = ["full"] }
