[package]
name = "icp_neuron_common"
version = "0.1.0"
description = "ICP neuron controller backend - implementation"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [] # Empty default features
inttest = []

[dependencies]
candid = { workspace = true }
icrc-ledger-types = { workspace = true }
ledger_utils = { path = "../../../libraries/ledger_utils" }
nns_governance_canister = { path = "../../../external_canisters/nns_governance/api" }
serde = { workspace = true }
serde_with = { workspace = true }
serde_bytes = { workspace = true }
types = { path = "../../../libraries/types" }
utils = { path = "../../../libraries/utils" }
