[package]
name = "management"
version = "0.1.0"
description = "Management canister that serves as a config"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
inttest = []

[dependencies]
candid = { workspace = true }
canister_logger = { path = '../../../libraries/canister_logger' }
canister_state_macros = { path = '../../../libraries/canister_state_macros' }
canister_tracing_macros = { path = '../../../libraries/canister_tracing_macros' }
http_request = { path = '../../../libraries/http_request' }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serializer = { path = '../../../libraries/serializer' }
stable_memory = { path = '../../../libraries/stable_memory' }
types = { path = '../../../libraries/types' }
utils = { path = '../../../libraries/utils' }
tracing = { workspace = true }
management_api_canister = { path = "../api" }
